Se agregan soluciones a la API
